--- a/views/index.pug
+++ b/views/index.pug
@@ -18,9 +18,9 @@ html.no-js(lang="en")
 
     //- React app
     //- Take out localhost:3001 part during production
-    script(src='http://localhost:3001/js/bundle.js')
+    //- script(src='http://localhost:3001/js/bundle.js')
     //- //- Comment out during development
-    //- script(src='/js/bundle.js')
+    script(src='/js/bundle.js')
 
     script.
       (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
